# general-structs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: mod.rs
