[package]
name = "general-structs"
version = "0.2.0"
description = "General-structures - this library allows you to create structures with common fields, and those that are different can be specified individually."
keywords = ["macros", "structures"]
categories = ["development-tools::procedural-macro-helpers"]
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license = "Apache-2.0"
rust-version = "1.68"
repository = "https://github.com/MayorDi/general-structs"
homepage = "https://github.com/MayorDi/general-structs"
readme = "README.md"
edition = "2021"

[dependencies]
syn = "2.0.66"
quote = "1.0.36"
proc-macro2 = "1.0.84"

[lib]
proc-macro = true